/*
 * StreamTeam
 * Copyright (C) 2019  University of Basel
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package streamTeam;

option java_package = "ch.unibas.dmi.dbis.streamTeam.dataStreamElements.protobuf";
option java_outer_classname = "DummyStreamElementPayloadProtos";

// Payload of a dummy stream element
message DummyStreamElementPayload {

    int64 longValue = 1; // Dummy long value

    bool boolValue = 2; // Dummy bool value

    string stringValue = 3; // Dummy string value

    double doubleValue = 4; // Dummy double value

    repeated int64 repeatedValue = 5; // Dummy repeated value
}